--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ html, body {
 }
 .center-container{
  
-  height: auto; 
+ 
   width: 350px;
   /* border: 2px solid red; */
     background: linear-gradient(135deg, #ff416c, #ff4b2b);;
@@ -31,10 +31,11 @@ html, body {
     padding: 50px;
 }
 .app-heading{
-  padding: 4px;
+  /* padding: 4px; */
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-transform: uppercase;
+  text-align: center;
 }
 .input-container{
   display: flex;
@@ -44,13 +45,14 @@ html, body {
 .input-box-todo{
   margin-left: 10px;
   width: 70%;
-  height: 40px;
+  /* height: 40px; */
   border-radius: 14px;
   border: 1ps solid black;
   padding-left: 10px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
   outline: none;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  border: none;
 }
 .add-btn{
   width: 40px;
@@ -68,7 +70,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 10px;
+  /* font-size: 10px; */
 }
 .add-btn:hover{
   box-shadow: none;
@@ -95,7 +97,7 @@ html, body {
 }
 .icons{
   position: absolute;
-  right: 10px;
+  right: 5px;
 }
 .icons i{
   margin: 4px;
